2010-03-22  Jakub Jelinek  <jakub@redhat.com>

	Backport from mainline:
	2010-03-19  Michael Matz  <matz@suse.de>

	PR c++/43116
	* attribs.c (decl_attributes): When rebuilding a function pointer
	type use the same qualifiers as the original pointer type.

	PR target/43305
	* builtins.c (expand_builtin_interclass_mathfn,
	expand_builtin_signbit): Use maybe_emit_unop_insn, emit libcalls
	if that fails.

	2010-03-18  Michael Matz  <matz@suse.de>

	PR middle-end/43419
	* builtins.c (expand_builtin_pow): Don't transform pow(x, 0.5)
	into sqrt(x) if we need to preserve signed zeros.

2010-03-21  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR middle-end/42718
	* pa.md (movmemsi): Set align to one if zero.
	(movmemdi): Likewise.

2010-03-21  Kaz Kojima  <kkojima@gcc.gnu.org>

	Backport from mainline:
	2009-05-12  Paolo Bonzini  <bonzini@gnu.org>

	PR target/43417
	* config/sh/sh.md (cbranchdi4_i): Use an "I08" constraint
	instead of "i" constraint.

2010-03-18  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline:
	2010-03-18  Steven Bosscher  <steven@gcc.gnu.org>
		    Eric Botcazou  <ebotcazou@adacore.com>

	PR rtl-optimization/43360
	* loop-invariant.c (move_invariant_reg): Remove the REG_EQUAL
	note if we don't know its invariant status.

2010-03-08  Jakub Jelinek  <jakub@redhat.com>

	Backport from mainline:
	2010-03-04  Andrew Pinski  <andrew_pinski@caviumnetworks.com>

	PR c/43248
	* c-decl.c (build_compound_literal): Return early if init is
	an error_mark_node.

2010-03-08  Jakub Jelinek  <jakub@redhat.com>

	Backport from mainline:
	2010-02-19  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/42233
	* dojump.c (do_jump) <case TRUTH_NOT_EXPR>: Invert priority.

	PR bootstrap/43121
	* except.c (sjlj_emit_function_enter): Don't call
	add_reg_br_prob_note, instead add REG_BR_PROB note to the last insn
	directly.
	* rtl.h (add_reg_br_prob_note): Remove prototype.

	PR middle-end/42233
	* loop-doloop.c (add_test): Adjust do_compare_rtx_and_jump caller.
