@@ -1,6 +1,13 @@
 2010-03-22  Jakub Jelinek  <jakub@redhat.com>
 
 	Backport from mainline:
+	2010-03-20  Richard Guenther  <rguenther@suse.de>
+
+	PR rtl-optimization/43438
+	* combine.c (make_extraction): Properly zero-/sign-extend an
+	extraction of the low part of a CONST_INT.  Also handle
+	CONST_DOUBLE.
+
 	2010-03-19  Michael Matz  <matz@suse.de>
 
 	PR c++/43116
